fixed nav bar on mobile.

--- a/style.css
+++ b/style.css
@@ -7,10 +7,6 @@ html {
 
 @media (pointer:none), (pointer:coarse) {
     html {
-        nav {
-            margin-left: 10px;
-            margin-right: 10px;
-        }
         margin-left: 15px;
         margin-right: 15px;
     }
